# NextBase

./: .bazelrc  .editorconfig  .gitattributes  .gitignore  AGENTS.md  BUILD.bazel  CLAUDE.md  MODULE.bazel  README.md  WORKSPACE  copilot-instructions.md
.claude/: settings.json
.devcontainer/: Dockerfile  devcontainer.json  devcontainer.schema.json
.devcontainer/scripts/: generate-proxy-env.sh
.github/: CODEOWNERS  PR_ASSISTANT.md
.github/PULL_REQUEST_TEMPLATE/: default.md
.github/workflows/: ci.yml
.skills/architecture-planning/: SKILL.md
.skills/dependency-build/: SKILL.md
.skills/development-environment/: SKILL.md
agent/: agent-core.md
bazel/: .gitkeep
docs/: .gitkeep  architecture-planning.md  ci.md  dependency-build.md  devcontainer.md  development-environment.md  monorepo.md  toolchains.md
services/go/hello/: BUILD.bazel
services/go/hello/cmd/hello/: main.go  main_test.go
services/hello_world/cpp/: BUILD.bazel
services/hello_world/cpp/hello/: BUILD.bazel
services/hello_world/cpp/hello/tests/: main_test.cc
services/hello_world/cpp/src/: main.cc
services/hello_world/csharp/: BUILD.bazel  smoke_test.sh
services/hello_world/csharp/hello/: BUILD.bazel  Program.cs  hello.csproj  run.sh
services/hello_world/csharp/src/: Program.cs
services/hello_world/go/: BUILD.bazel
services/hello_world/go/hello/: BUILD.bazel
services/hello_world/go/hello/cmd/hello/: main_test.go
services/hello_world/rust/hello/: BUILD.bazel
services/hello_world/typescript/: BUILD.bazel  run.sh  smoke_test.py  smoke_test.sh
services/hello_world/typescript/hello/: BUILD.bazel  run.sh  smoke_test.sh  tsconfig.json
services/rust/hello/src/: main.rs  main_test.rs
tools/scripts/: verify.ps1
