module(
    name = "nextbase",
    version = "0.1.0",
)

# 语言规则依赖
bazel_dep(name = "rules_go", version = "0.49.0")
bazel_dep(name = "gazelle", version = "0.36.0")
bazel_dep(name = "rules_rust", version = "0.69.0")
bazel_dep(name = "rules_dotnet", version = "0.21.5")
bazel_dep(name = "aspect_rules_ts", version = "3.8.8", repo_name = "rules_ts")
bazel_dep(name = "rules_nodejs", version = "6.7.3")
bazel_dep(name = "rules_cc", version = "0.2.17")
bazel_dep(name = "toolchains_llvm", version = "1.7.0")

# Go 工具链配置
go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.23.6")

# Rust 工具链配置
rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")
rust.toolchain(
    edition = "2021",
    versions = ["1.83.0"],
)
use_repo(rust, "rust_toolchains")

# C#/.NET 工具链配置
dotnet = use_extension("@rules_dotnet//dotnet:extensions.bzl", "dotnet")
dotnet.toolchain(
    dotnet_version = "8.0.100",
)
use_repo(dotnet, "dotnet_toolchains")

# TypeScript/Node.js 工具链配置
node = use_extension("@rules_nodejs//nodejs:extensions.bzl", "node")
node.toolchain(
    node_version = "18.19.0",
)
use_repo(node, "nodejs", "nodejs_linux_amd64", "nodejs_toolchains")

ts = use_extension("@rules_ts//ts:extensions.bzl", "ext")
ts.deps(ts_version = "5.8.3")
use_repo(ts, "npm_typescript")

# C/C++ Clang 工具链配置（hermetic，完全由 Bazel 管理）
llvm = use_extension("@toolchains_llvm//toolchain/extensions:llvm.bzl", "llvm")
llvm.toolchain(
    name = "llvm_toolchain",
    llvm_version = "17.0.6",
)
use_repo(llvm, "llvm_toolchain")

# 注册所有工具链
register_toolchains(
    "@llvm_toolchain//:all",
    "@rust_toolchains//:all",
    "@dotnet_toolchains//:all",
    "@nodejs_toolchains//:linux_amd64_runtime_toolchain",
    "@nodejs_toolchains//:linux_amd64_toolchain",
)
