load("@rules_go//go:def.bzl", "go_binary", "go_test")

go_binary(
    name = "hello",
    srcs = ["cmd/hello/main.go"],
    importpath = "example.com/nextbase/services/hello_world/go",
    visibility = ["//visibility:public"],
)

go_test(
    name = "hello_test",
    srcs = ["cmd/hello/main_test.go"],
)
