load("@rules_rust//rust:defs.bzl", "rust_binary", "rust_test")

rust_binary(
    name = "hello",
    srcs = ["src/main.rs"],
    crate_root = "src/main.rs",
    edition = "2021",
    visibility = ["//visibility:public"],
)

rust_test(
    name = "hello_test",
    srcs = ["src/main_test.rs"],
    crate_root = "src/main_test.rs",
    edition = "2021",
)
